; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/gas/extr_macro.c_delete_macro.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/gas/extr_macro.c_delete_macro.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@macro_hash = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [41 x i8] c"Attempt to purge non-existant macro `%s'\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @delete_macro(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  %7 = load i8*, i8** %2, align 8
  %8 = call i64 @strlen(i8* %7)
  store i64 %8, i64* %5, align 8
  %9 = load i64, i64* %5, align 8
  %10 = add i64 %9, 1
  %11 = call i64 @alloca(i64 %10)
  %12 = inttoptr i64 %11 to i8*
  store i8* %12, i8** %3, align 8
  store i64 0, i64* %4, align 8
  br label %13

13:                                               ; preds = %26, %1
  %14 = load i64, i64* %4, align 8
  %15 = load i64, i64* %5, align 8
  %16 = icmp ult i64 %14, %15
  br i1 %16, label %17, label %29

17:                                               ; preds = %13
  %18 = load i8*, i8** %2, align 8
  %19 = load i64, i64* %4, align 8
  %20 = getelementptr inbounds i8, i8* %18, i64 %19
  %21 = load i8, i8* %20, align 1
  %22 = call signext i8 @TOLOWER(i8 signext %21)
  %23 = load i8*, i8** %3, align 8
  %24 = load i64, i64* %4, align 8
  %25 = getelementptr inbounds i8, i8* %23, i64 %24
  store i8 %22, i8* %25, align 1
  br label %26

26:                                               ; preds = %17
  %27 = load i64, i64* %4, align 8
  %28 = add i64 %27, 1
  store i64 %28, i64* %4, align 8
  br label %13

29:                                               ; preds = %13
  %30 = load i8*, i8** %3, align 8
  %31 = load i64, i64* %4, align 8
  %32 = getelementptr inbounds i8, i8* %30, i64 %31
  store i8 0, i8* %32, align 1
  %33 = load i32, i32* @macro_hash, align 4
  %34 = load i8*, i8** %3, align 8
  %35 = call i32* @hash_find(i32 %33, i8* %34)
  store i32* %35, i32** %6, align 8
  %36 = icmp ne i32* %35, null
  br i1 %36, label %37, label %43

37:                                               ; preds = %29
  %38 = load i32, i32* @macro_hash, align 4
  %39 = load i8*, i8** %3, align 8
  %40 = call i32 @hash_jam(i32 %38, i8* %39, i32* null)
  %41 = load i32*, i32** %6, align 8
  %42 = call i32 @free_macro(i32* %41)
  br label %47

43:                                               ; preds = %29
  %44 = call i32 @_(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0))
  %45 = load i8*, i8** %3, align 8
  %46 = call i32 @as_warn(i32 %44, i8* %45)
  br label %47

47:                                               ; preds = %43, %37
  ret void
}

declare dso_local i64 @strlen(i8*) #1

declare dso_local i64 @alloca(i64) #1

declare dso_local signext i8 @TOLOWER(i8 signext) #1

declare dso_local i32* @hash_find(i32, i8*) #1

declare dso_local i32 @hash_jam(i32, i8*, i32*) #1

declare dso_local i32 @free_macro(i32*) #1

declare dso_local i32 @as_warn(i32, i8*) #1

declare dso_local i32 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
